--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="box-x">
-        <h3>This is my profolio</h3>
+        <h3>This is my portfolio</h3>
         <img src="http://i64.tinypic.com/16bwyhd.png" border="0" alt="Image and video hosting by TinyPic">
         <p>A Quiz app i made using Javascript, Jquery, css and html</p>
         <ul>
